--- a/box_utils/box_auto/python/box_auto/scripts/verification/plot_ptp_timeoffset.ipynb
+++ b/box_utils/box_auto/python/box_auto/scripts/verification/plot_ptp_timeoffset.ipynb
@@ -21,7 +21,7 @@
     "}\n",
     "\n",
     "# Example usage\n",
-    "directory = \"/mission_data\"  # Path where ROS bags are stored\n",
+    "directory = \"/tmp_disk\"  # Path where ROS bags are stored\n",
     "\n",
     "\n",
     "offsets = {}\n",
